--- a/package.json
+++ b/package.json
@@ -4,42 +4,51 @@
   "description": "helper to delay streams",
   "main": "lib/index.js",
   "scripts": {
-    "test": "npm run lint && mocha --require babel-polyfill  --compilers js:babel-core/register ./test/**/*.spec.js",
+    "precommit": "lint-staged",
+    "test": "npm run lint && jest",
     "lint": "eslint .",
     "build": "babel src/ --out-dir lib/ --copy-files",
     "cover": "cross-env NODE_ENV=test nyc npm t"
   },
   "devDependencies": {
+    "@verdaccio/types": "0.2.0",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "21.2.0",
+    "babel-plugin-flow-runtime": "0.11.1",
     "babel-plugin-istanbul": "4.1.4",
     "babel-polyfill": "6.23.0",
-    "babel-preset-es2015": "6.24.1",
+    "babel-preset-env": "1.6.0",
+    "babel-preset-flow": "6.23.0",
     "cross-env": "5.0.1",
     "eslint": "4.1.1",
     "eslint-config-google": "0.9.1",
-    "mocha": "3.4.2",
-    "nyc": "11.0.3"
+    "eslint-plugin-flowtype": "^2.41.0",
+    "eslint-plugin-jest": "21.2.0",
+    "flow-bin": "0.52.0",
+    "flow-runtime": "0.13.0",
+    "husky": "0.14.3",
+    "jest": "21.2.1",
+    "lint-staged": "^6.0.0",
+    "prettier": "1.10.2"
   },
-  "nyc": {
-    "include": [
-      "src/**/*.js"
-    ],
-    "all": true,
-    "cache": true,
-    "sourceMap": false,
-    "instrument": false,
-    "report-dir": "./tests-report",
-    "reporter": [
-      "text",
-      "html"
+  "engines": {
+    "node": ">=6.12.0",
+    "npm": ">=3"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
     ]
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
   "keywords": [
-    "streams"
+    "streams",
+    "verdaccio"
   ],
   "author": "Juan Picado <juanpicado19@gmail.com>",
   "private": false,
