--- a/package.json
+++ b/package.json
@@ -1,51 +1,44 @@
 {
   "name": "@verdaccio/streams",
   "version": "1.0.0",
-  "description": "helper to delay streams",
+  "description": "stream extension for verdaccio",
   "main": "lib/index.js",
   "scripts": {
+    "release": "standard-version -a -s",
     "precommit": "lint-staged",
-    "test": "npm run lint && jest",
+    "test": "jest",
     "lint": "eslint .",
-    "prepublish": "npm run build",
-    "build": "babel src/ --out-dir lib/ --copy-files",
-    "cover": "cross-env NODE_ENV=test nyc npm t"
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "npm run type-check -- --watch",
+    "build": "npm run build:types && npm run build:js",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline"
   },
   "devDependencies": {
-    "@verdaccio/types": "0.2.0",
-    "babel-cli": "6.24.1",
-    "babel-core": "6.25.0",
-    "babel-eslint": "8.2.1",
-    "babel-jest": "22.1.0",
-    "babel-plugin-flow-runtime": "0.11.1",
-    "babel-plugin-istanbul": "4.1.4",
-    "babel-polyfill": "6.23.0",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-flow": "6.23.0",
+    "@types/node": "^10.12.18",
+    "@verdaccio/babel-preset": "0.0.3",
+    "@verdaccio/types": "4.1.4",
     "cross-env": "5.1.3",
     "eslint": "4.16.0",
     "eslint-config-google": "0.9.1",
-    "eslint-plugin-flowtype": "2.41.0",
     "eslint-plugin-jest": "21.7.0",
-    "flow-bin": "0.52.0",
-    "flow-runtime": "0.16.0",
+    "eslint-plugin-verdaccio": "0.0.5",
     "husky": "0.14.3",
-    "jest": "22.1.4",
+    "jest": "^24.0.0",
     "lint-staged": "6.0.1",
-    "prettier": "1.10.2"
+    "prettier": "1.10.2",
+    "standard-version": "4.4.0",
+    "typescript": "^3.2.4"
   },
   "engines": {
     "node": ">=6.12.0",
-    "npm": ">=3"
+    "npm": ">=4"
   },
   "lint-staged": {
     "*.js": [
       "eslint --fix",
       "git add"
     ]
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
   },
   "keywords": [
     "streams",
