--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "release": "standard-version -a -s",
     "precommit": "lint-staged",
     "test": "jest",
-    "lint": "eslint .",
+    "lint": "npm run type-check && eslint .",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "build": "npm run build:types && npm run build:js",
@@ -15,24 +15,24 @@
     "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline"
   },
   "devDependencies": {
-    "@types/node": "^10.12.18",
-    "@verdaccio/babel-preset": "0.0.3",
-    "@verdaccio/types": "4.1.4",
-    "cross-env": "5.1.3",
-    "eslint": "4.16.0",
-    "eslint-config-google": "0.9.1",
-    "eslint-plugin-jest": "21.7.0",
+    "@types/node": "11.12.1",
+    "@verdaccio/babel-preset": "0.1.0",
+    "@verdaccio/types": "5.0.0-beta.4",
+    "cross-env": "5.2.0",
+    "eslint": "5.15.3",
+    "eslint-config-google": "0.12.0",
+    "eslint-plugin-jest": "22.4.1",
     "eslint-plugin-verdaccio": "0.0.5",
     "husky": "0.14.3",
-    "jest": "^24.0.0",
+    "jest": "24.5.0",
     "lint-staged": "6.0.1",
-    "prettier": "1.10.2",
-    "standard-version": "4.4.0",
-    "typescript": "^3.2.4"
+    "prettier": "1.16.4",
+    "standard-version": "5.0.2",
+    "typescript": "3.2.4"
   },
   "engines": {
-    "node": ">=6.12.0",
-    "npm": ">=4"
+    "node": ">=8",
+    "npm": ">=5"
   },
   "lint-staged": {
     "*.js": [
