--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@verdaccio/streams",
-  "version": "2.0.0-beta.0",
+  "version": "2.0.0",
   "description": "stream extension for verdaccio",
   "main": "lib/index.js",
   "scripts": {
