--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "release": "standard-version -a -s",
     "precommit": "lint-staged",
     "test": "jest",
-    "lint": "npm run type-check && eslint .",
+    "lint": "npm run type-check && eslint . --ext .js,.ts",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "build": "npm run build:types && npm run build:js",
@@ -18,15 +18,12 @@
     "@types/node": "11.12.1",
     "@verdaccio/babel-preset": "0.1.0",
     "@verdaccio/types": "5.0.0-beta.4",
+    "@verdaccio/eslint-config": "0.0.1",
     "cross-env": "5.2.0",
     "eslint": "5.15.3",
-    "eslint-config-google": "0.12.0",
-    "eslint-plugin-jest": "22.4.1",
-    "eslint-plugin-verdaccio": "0.0.5",
     "husky": "0.14.3",
     "jest": "24.5.0",
     "lint-staged": "6.0.1",
-    "prettier": "1.16.4",
     "standard-version": "5.0.2",
     "typescript": "3.2.4"
   },
